labs/06-ingress-lab/02-apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: apache-deployment
  namespace: sre

spec:
  replicas: 2

  selector:
    matchLabels:
      app: apache

  template:
    metadata:
      labels:
        app: apache

    spec:
      containers:
        - name: apache
          image: httpd:2.4
          ports:
            - containerPort: 80
