labs/06-ingress-lab/03-nginx-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-service
  namespace: sre

spec:
  type: ClusterIP

  selector:
    app: nginx

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
