labs/06-ingress-lab/04-apache-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: apache-service
  namespace: sre

spec:
  type: ClusterIP

  selector:
    app: apache

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
